@@ -1,6 +1,6 @@
-$NetBSD$
+$NetBSD: distinfo,v 1.4 2012/09/28 13:41:30 gdt Exp $
 
-SHA1 (fldigi-3.21.52.tar.gz) = 3efb868cc1577f2d3368794c3f76e6fcb3a02dae
-RMD160 (fldigi-3.21.52.tar.gz) = 94ae20b7c0cf4bf37d8eb3f4dec4643e5acc9481
-Size (fldigi-3.21.52.tar.gz) = 1794366 bytes
+SHA1 (fldigi-3.21.53.tar.gz) = bf98985b12383ca753ab7ab789d119d40c0b712b
+RMD160 (fldigi-3.21.53.tar.gz) = 3977e3b8f4b58b3f4c2991581819ffd805914b22
+Size (fldigi-3.21.53.tar.gz) = 1794250 bytes
 SHA1 (patch-src_misc_newinstall.cxx) = 9cb519bb0bc862b18cfc7fb7bf85c2259e4ff2f0
